# dualarm_manipulator

./: .README.md.swp  README.md
action_client/: CMakeLists.txt  package.xml
action_client/include/action_client/: VrepInterface.hpp
action_client/launch/: vrep_interface.launch
action_client/src/: VrepInterface.bkp_0903.cpp
jaco_arm_pkgs/jaco_arm_pkgs/: CMakeLists.txt  package.xml
jaco_arm_pkgs/jaco_description/config/: JacoJoints.yaml
jaco_arm_pkgs/jaco_description/urdf/: jaco.urdf  jaco.urdf.xacro  jaco_on_table.urdf.xacro  plugin_joint_control.urdf.xacro  standalone_arm.urdf.xacro  table.urdf  table.xacro
jaco_controller/: CMakeLists.txt  package.xml
jaco_controller/launch/: jaco_controller.bkp_0829.launch  jaco_controller.bkp_0903.launch  jaco_controller.launch
jaco_controller/src/: jaco_controller.bkp_0903.cpp  jaco_controller.cpp  jaco_controller_test.cpp  script_test.cpp
jaco_controller_kinova/: CMakeLists.txt  package.xml
jaco_controller_kinova/launch/: jaco_controller_kinova.launch
jaco_controller_kinova/src/: jaco_controller_kinova.cpp
kinova-ros/kinova_bringup/launch/: kinova_robot.launch
kinova-ros/kinova_demo/nodes/kinova_demo/: joints_action_client.py
kinova-ros/kinova_driver/src/joint_trajectory_action/: gripper_command_action_server.cpp
kinova-ros/kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: moveit.rviz
moveit/moveit_ros/move_group/: CMakeLists.txt
moveit/moveit_ros/move_group/include/moveit/move_group/: move_group_exe.h
moveit/moveit_ros/move_group/src/: move_group.cpp  move_group_exe.cpp
moveit/moveit_ros/planning/planning_scene_monitor/include/moveit/planning_scene_monitor/: current_state_monitor.h
moveit/moveit_ros/planning/planning_scene_monitor/src/: current_state_monitor.cpp  planning_scene_monitor.cpp
teleop_msg_publisher/: CMakeLists.txt  package.xml  setup.py
teleop_msg_publisher/launch/: teleop_msg_publisher.bkp_1004.launch  teleop_msg_publisher.launch
teleop_msg_publisher/scripts/: teleop_msg_publisher.bkp_1004.py  teleop_msg_publisher.py
vrep_jaco_bringup/: CMakeLists.txt  package.xml  setup.py
vrep_jaco_bringup/launch/: bringup.launch  model.bkp_0828.launch  vrep.launch
vrep_jaco_bringup/scene/: table.ttt  table2.ttt
vrep_jaco_bringup/scripts/: vrep_jaco_bringup_simulator.py
vrep_jaco_moveit/: .setup_assistant  CMakeLists.txt  package.xml
vrep_jaco_moveit/config/: jaco.bkp_0828_1.srdf  jaco.bkp_0828_2.srdf  jaco_joints_position.txt  joint_limits.yaml  kinematics.yaml  moveit_simple_controllers.yaml  moveit_simple_controllers_mod.yaml  ompl_planning.bkp_0828.yaml  ompl_planning.yaml
vrep_jaco_moveit/config/config_old/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  ros_controllers.yaml
vrep_jaco_moveit/launch/: jaco_moveit.launch  jaco_moveit_simple_controller_manager.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.bkp_0828.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  vrep_jaco_moveit.launch
vrep_jaco_moveit/launch/launch_old/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  jaco_mod_moveit_controller_manager.launch.xml  jaco_mod_planning_execution.launch  jaco_moveit_controller_manager.launch.xml  move_group.bkp_0820.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
