<package format="2">
	<name>teleop_msg_publisher</name>
	<version>0.0.0</version>
	<description>Package teleop_msg_publisher</description>
	<maintainer email="jpvcener@uwaterloo.ca">Joe Cenerini</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>kinova_driver</build_depend>
  	<build_depend>kinova_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend> kinova_driver</exec_depend>
	<exec_depend> kinova_msgs</exec_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
</package>
